Tests: minor improvement to nested lists manual test.

--- a/tests/manual/nestedlists.html
+++ b/tests/manual/nestedlists.html
@@ -14,8 +14,8 @@
 					<ul>
 						<li>Bullet list item 1.2.1</li>
 						<li>Bullet list item 1.2.2</li>
-						<li>Numbered list item 1.2.3</li>
-						<li>Numbered list item 1.2.4</li>
+						<li>Bullet list item 1.2.3</li>
+						<li>Bullet list item 1.2.4</li>
 					</ul>
 				</li>
 			</ul>
